# realtime_scam_detect

./: .gitignore  LICENSE  README.md  learning.py  main.py  plan.md  pyproject.toml  run_eval.sh  run_eval_bg.sh
agents/: ai_agent.py  bank_kb.py
agents/data/: BOGUS.md  GENERAL.md  MAYBANK.md  PUBLICBANK.md
android/: AndroidManifest.xml  BUILD_GRADLE_INSTRUCTIONS.txt  MainActivity.kt
config/: eval.yaml
config/banks/: ambank.yaml  bankislam.yaml  bogusbank.yaml  bsn.yaml  cimb.yaml  hongleong.yaml  maybank.yaml  publicbank.yaml  rhb.yaml
src/: asr.py  audio_utils.py  bank_config.py  index.html  server.py  session.py  test_ws.py
test_data/: adversarial.json  en.json  mixed.json  ms.json  zh.json
tools/eval/: run_eval.py  stream_monitor.py
tools/tts/: generate.py  generate_adversarial.py  generate_audio.py  generate_test_data.py  pyproject.toml  transcripts.json
