[project]
name = "realtime-scam-detect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=0.3.0",
    "langchain-litellm>=0.6.4",
    "langchain-openai>=1.1.12",
    "litert-lm>=0.10.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "numpy>=2.0.0",
    "websockets>=14.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "huggingface-hub>=0.30.0",
    "faster-whisper>=1.0.3",
]
